[gd_scene load_steps=2 format=3 uid="uid://djup50xtuylo4"]

[ext_resource type="Script" uid="uid://fc8ch0nchqqp" path="res://ui/components/AllocationMenu.gd" id="1_alloc"]

[node name="AllocationMenu" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
script = ExtResource("1_alloc")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ControlPanel" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 15
alignment = 1

[node name="FarmersLabel" type="Label" parent="HBoxContainer/ControlPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Farmers: 0"
horizontal_alignment = 1

[node name="FarmersSlider" type="HSlider" parent="HBoxContainer/ControlPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="WoodLabel" type="Label" parent="HBoxContainer/ControlPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Woodcutters: 0"
horizontal_alignment = 1

[node name="WoodSlider" type="HSlider" parent="HBoxContainer/ControlPanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4

[node name="InfoPanel" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="YieldLabel" type="Label" parent="HBoxContainer/InfoPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Projected: ---"

[node name="HSeparator" type="HSeparator" parent="HBoxContainer/InfoPanel"]
layout_mode = 2

[node name="WinterDemandLabel" type="Label" parent="HBoxContainer/InfoPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Projected: ---"

[node name="WinterStatusLabel" type="Label" parent="HBoxContainer/InfoPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Projected: ---"

[node name="CommitBtn" type="Button" parent="HBoxContainer/InfoPanel"]
unique_name_in_owner = true
layout_mode = 2
text = "Commit Assignment"
